--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,6 @@
 ============================================*/
 .educacion {
 	display: flex;
-	border: 1px solid var(--rosa);
 	height: calc(50vw * 80 / 100);
 }
 
@@ -39,7 +38,7 @@
 }
 
 .educacion__texto {
-	width: 42%;
+	width: 40%;
 	padding: 2%;
 	overflow: auto;
 }
@@ -48,28 +47,25 @@
 	width: 10px;
 }
 .educacion__texto::-webkit-scrollbar-thumb{
+	width: 10px;
 	background   : var(--rosa);
 	border-radius: 10px;
 }
 
-.educacion__titulo {
-	font-size     : 3em;
+.educacion__titulo, .jovenes__titulo {
+	font-size     : 2rem;
 	font-weight   : 800;
 	color: var(--rosa);
 }
 
-.educacion__parrafo {
-	margin: 1% 0;
+.educacion__parrafo, .educacion__lista, .jovenes__parrafo {
+	margin: 1.25rem 0;
 }
 
 .educacion__subtitulo {
-	font-size     : 2em;
+	font-size     : 1.5rem;
 	font-weight   : 600;
 	color: var(--rosa);
-}
-
-.educacion__lista {
-	margin: 1% 0;
 }
 
 .educacion__elemento {
@@ -105,38 +101,72 @@
 	transition   : all .3s ease-out;
 }
 
-
-
-		/*DISEÑOS RESPONSIVO*/
-@media (max-width: 991px) and (min-width: 768px) {
-	.cuadro-texto {
-		font-size: 14px;
-	}
-	.cuadro-texto h2 {
-		font-size: 2.5em;
-	}
-}
-@media (max-width: 767px) {
-	.cuadro-imagen img {
-		width: 100%;
-	}
-	.cuadro-texto h2 {
-		font-size: 2.5em;
-	}
-	.cuadro-texto {
-		width  : 100%; 
-		height : 88vw;
-		font-size: 14px;
-		padding: 0 5%;
-	}
-	.cuadro-texto li:before{
-		height     : 4vw;
-		width      : 4vw;
-		line-height: 2vw;
-		margin-top   : -2.3vw;
-	}
-	.cuadro-texto li {
-		padding: .4vw .4vw .4vw 6vw;
-	}
-}
 /*=====  End of SECCIÓN DE EDUCACIÓN  ======*/
+
+/*============================================
+=        SECCIÓN DE JOVENES EN CASA        =
+============================================*/
+
+.espacio {
+	height: 10vh;
+}
+.jovenesCasa {
+	display: flex;
+	padding: 2rem;
+}
+
+.jovenes__texto {
+	width: 50%;
+	padding: 0 5%;
+}
+
+.jovenes__titulo {text-align: center;}
+
+.jovenes__slider {
+	align-self: center;
+	background-color: var(--rosa);
+    border-radius: 10px;
+	width          : 50%;
+	height: 31rem;
+	position: relative;
+	list-style     : none;
+	display        : flex;
+	justify-content: space-evenly;
+	align-items: flex-end;
+}
+.jovenes__video {
+	position: absolute;
+	top       : 10%;
+	left: 5%;
+	width     : 90%;
+	height    : 80%;
+	opacity   : 0;
+	border-radius: 10px;
+	box-shadow: 30px -30px 0px rgba(255, 255, 255, 0.274);
+	transition: all 0.7s;
+}
+.jovenes__input[type="radio"] {
+	display: none;
+}
+.jovenes__input[type="radio"]:checked ~ .jovenes__video {
+	opacity: 1;
+	z-index: 10;
+}
+.jovenes__input[type="radio"] + .jovenes__label {
+	position     : relative;
+	z-index      : 50;
+	margin       : 1rem;
+	cursor       : pointer;
+	display      : block;
+	width        : 20px;
+	height       : 20px;
+	background   : var(--blanco);
+	border-radius: 50%;
+	border       : 2px solid var(--rosa);
+}
+.jovenes__input[type="radio"]:checked + .jovenes__label {
+	background: var(--rosa);
+	border    : 2px solid var(--blanco);
+}
+
+/*=====  End of SECCIÓN DE JOVENES EN CASA  ======*/
