--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -3,53 +3,58 @@
 ==============================*/
 
 /* Tablets en horizonal y escritorios normales */
+@media (min-width: 1200px) {
+    .educacion__titulo {
+        font-size     : 2.5em;
+    }
+}
+
 @media (min-width: 768px) and (max-width: 1199px) { 
     :root {
         font-size: 14px;
     }
-    .educacion__titulo {
-        font-size     : 2em;
+    .jovenes__parrafo {
+        margin: 0.5rem 0;
     }
-    .educacion__subtitulo {
-        font-size     : 1.5em;
+    .jovenes__video {
+        box-shadow: 1rem -1rem 0px rgba(255, 255, 255, 0.274);
     }
 }
 
 /* Móviles en horizontal o tablets en vertical */
 @media (max-width: 767px) { 
-    :root {
-        font-size: 14px;
-    }
+    :root {font-size: 14px;}
     .educacion {
         display: block;
         height: auto;
     }
-    .educacion__imagen {
-		width: 100%;
-	}
-    .educacion__img {
-        width: 100%;
-        float: none;
-    }
-	.educacion__texto {
-		width  : 100%;
-    	height: 100vw; 
-	}
-    .educacion__titulo {
-        font-size     : 2em;
-    }
-    .educacion__subtitulo {
-        font-size     : 1.5em;
-    }
+    .educacion__imagen, .educacion__img, .educacion__texto {width: 100%;}
+    .educacion__img {float: none;}
+	.educacion__texto {height: 100vw;}
 	.educacion__elemento::before{
 		height     : 4vw;
 		width      : 4vw;
 		line-height: 2vw;
 		margin-top   : -2.3vw;
 	}
-	.educacion__elemento  {
-		padding: .4vw .4vw .4vw 6vw;
-	}
+	.educacion__elemento  {padding: .4vw .4vw .4vw 6vw;}
+    .jovenesCasa {
+        display: block;
+        padding: 2%;
+    }
+    .jovenes__texto {
+        width: 100%;
+	    padding: 0;
+    }
+    .jovenes__slider {
+        width: 100%;
+	    height: 320px;
+    }
+    .jovenes__video {
+        width     : 90%;
+        height    : 75%;
+        box-shadow: 1rem -1rem 0px rgba(255, 255, 255, 0.274);
+    }
 }
 
 /* Móviles en vertical */
